# sandcastle_of_babble

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  install_dependencies.sh  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
sandcastle_of_babble/: __init__.py  cli.py  pdf_to_audio.py  tts.py
tests/: __init__.py  test_sandcastle_of_babble.py
