[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sandcastle_of_babble"
version = "0.1.0"
description = "SandcastleOfBabble: Turning Pages into Prattle - A Python application that converts PDF text into audio content."
authors = ["Jordie Belle <jordie.belle@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PyPDF2 = "^1.26.0"
pyttsx3 = "^2.90"
pydub = "^0.24.1"
click = "^8.1.3"
scipy = "^1.10.1"
silero = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

